--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,12 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	
 }
 ._ibg {
-
+	position: relative;
+}
+._ibg img {
+	position: absolute;
+	left: 65.88%;
+	top: 15.24%;
 }
 .header {
 	position: absolute;
@@ -113,14 +118,14 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 		width: 50px;
 	}
 }
-
 .menu__link {
 font-weight: 700;
 font-size: 16px;
 line-height: 38px;
 color: #4081FF;
 	
-	
+/*------------------------------------------*/
+/*------------------------------------------*/
 }
 .page {
 	flex: 1 1 auto;
@@ -134,6 +139,7 @@ color: #4081FF;
 	min-height: 518px;
 	top: 0;
 	left: 0;
+	margin: 0 0 64px 0;
 }
 .main-block_container {
 }
@@ -166,6 +172,118 @@ color: #4081FF;
 }
 ._ibg {
 }
+/*-----------------------------------------*/
+.page__price-block {
+}
+.price-block {
+	
+}
+.price-block_container {
+}
+._container {
+}
+.price-block__text {
+}
+.price-block__text_free {
+	font-weight: 600;
+	font-size: 32px;
+	line-height: 65px;
+	color: #263238;
+}
+.price-block__text_free span {
+	color: #20B361;
+}
+.price-block__text_sub {
+	font-size: 16px;
+	line-height: 140%;
+	color: #818594;
+}
+.price-block__plan {
+	display: flex;
+	margin: 103px 0 86px 0;
+	
+}
+.price-block__list {
+	width: 366px;
+	padding: 63px 25px 0 0;
+	font-size: 15px;
+	line-height: 140%;
+	text-align: right;
+	color: #818594;
+	border: 1px solid #DCDFEE;
+}
+.price-block__list p {
+	padding: 0 0 20px 0;
+}
+.price-block__start {
+	width: 208px;
+	padding: 17px;
+	background: linear-gradient(360deg, #F2F3F9 -76.23%, rgba(242, 243, 249, 0) 135.58%);
+}
+.price-block__start_recomendation {
+	display: block;
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 10px;
+	line-height: 135%;
+	display: flex;
+	align-items: center;
+	text-transform: uppercase;
+	color: #818594;
+	width: 120px;
+	height: 19px;
+	background: #F7F7F9;
+	border-radius: 3px;
+	margin-bottom: 23px;
+}
+.price-block__start_name {
+	font-weight: 600;
+	font-size: 24px;
+	line-height: 32px;
+	color: #1C2133;
+	margin-bottom: 8px;
+}
+.price-block__start__sum {
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 32px;
+	
+	margin-bottom: 16px;
+	}
+	.sum_green {
+		color: #20B361;
+	}
+	.sum_blue {
+		color: #4164E2;
+	}
+
+.price-block__start_publication {
+	font-size: 15px;
+	line-height: 140%;
+	color: #818594;
+	margin-bottom: 20px;
+}
+.price-block__start_publication num {
+	font-weight: 700;
+	font-size: 15px;
+	line-height: 140%;
+	color: #000000;
+}
+.price-block__start_period {
+	font-size: 15px;
+	line-height: 140%;
+	color: #818594;
+	margin-bottom: 20px;
+}
+
+
+
+
+
+
+
+/*-----------------------------------------*/
 .footer {
 	width: 100%;
 	
