--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ ul li{list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*--------------------*/
-@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+
 .body {
 	
 	height: 100%;
@@ -198,10 +198,12 @@ color: #4081FF;
 	line-height: 140%;
 	color: #818594;
 }
+.price-block__text_sub span {
+	color: #4164E2;
+}
 .price-block__plan {
 	display: flex;
-	margin: 103px 0 86px 0;
-	
+	margin: 103px 0 86px 0;	
 }
 .price-block__list {
 	width: 366px;
@@ -219,6 +221,12 @@ color: #4081FF;
 	width: 208px;
 	padding: 17px;
 	background: linear-gradient(360deg, #F2F3F9 -76.23%, rgba(242, 243, 249, 0) 135.58%);
+	border-right: 1px solid ;
+	border-image: linear-gradient(#FFFFFF , #DCDFEE );
+	border-image-slice: 1;
+}
+.price-block__start:last-child {
+	border: none;
 }
 .price-block__start_recomendation {
 	display: block;
@@ -276,13 +284,45 @@ color: #4081FF;
 	color: #818594;
 	margin-bottom: 20px;
 }
-
-
-
-
-
-
-
+/*-------------------------------*/
+.page__rules-block {
+}
+.rules-block {
+}
+.rules-block_container {
+	margin-bottom: 100px;
+}
+._container {
+}
+.rules-block__title {
+	font-weight: 600;
+	font-size: 32px;
+	line-height: 65px;
+	color: #263238;
+	margin-bottom: 18px;
+}
+.rules-block__list {
+	padding: 0 0 0 17px;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 140%;
+	display: flex;
+	align-items: center;
+	color: #333333;
+	min-height: 66px;
+}
+.rules-block__list:nth-child(odd) {
+background: #F8F9FB;
+}
+.list_emoji {
+	background: linear-gradient(360deg, #F2F3F9 -76.23%, rgba(242, 243, 249, 0) 135.58%);
+	width: 33px;
+	height: 33px;
+	border-radius: 16.5px;
+}
+.list_text {
+	padding-left: 10px;
+}
 /*-----------------------------------------*/
 .footer {
 	width: 100%;
@@ -298,9 +338,13 @@ display: flex;
 	flex-wrap: wrap;
 	background: linear-gradient(360deg, rgba(242, 243, 249, 0) -76.23%, #F2F3F9 135.58%);
 	border-radius: 9px;	
-	max-width: 504px;
 	min-height: 60px;
 	align-items: center;
+	font-family: 'Montserrat';
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 140%;
 }
 .footer__mail {
 	padding: 0 13px 0 22px;	
@@ -311,13 +355,28 @@ display: flex;
 font-size: 16px;
 line-height: 140%;
 color: #4164E2;
+padding-right: 38px;
 }
-.footer__tel {
-	padding: 0 13px 0 38px;
+.footer__tel img {
+	padding: 0 13px 0 22px;
+}
+@media (max-width:502px) {
+	.mail__adress {
+		font-size: 18px;
+		padding: 10px 0;
+		}
 }
 .tel__num {
+padding-right: 35px;	
 font-size: 16px;
 line-height: 140%;
 color: #212121;
 width: 175px;
+}
+@media (max-width:502px) {
+	.tel__num {
+		font-size: 18px;
+		padding: 10px 38px 10px 0 ;
+		
+		}
 }
