--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,10 @@ color: #4081FF;
 	right: 0px;
 	top: 307px;
 	z-index: 40;
-
+}
+.main-block_logo img {
+	width: 100%;
+	height: 100%;
 }
 ._container {
 }
