--- a/css/style.css
+++ b/css/style.css
@@ -78,11 +78,11 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 .header__menu {
 display: flex;
-	
+max-height: 98px;
 }
 .menu__list {
 	display: flex;
-	flex-wrap: wrap;
+/*	flex-wrap: wrap; */
 	
 }
 .menu__item {
@@ -91,6 +91,17 @@ display: flex;
 	background: #121212;
 	border: 1px solid #292929;
 }
+@media (max-width: 908px) {
+	.menu__item {
+		padding: 14px 7px;
+		align-items: center;
+
+	}
+}
+
+
+
+
 .menu__item:hover {
 	background: #1C2133;
 }
@@ -101,6 +112,7 @@ display: flex;
 		
 	}
 } */
+/*
 .menu__item span {
 	display: inline-block
 	font-weight: 700;
@@ -109,7 +121,7 @@ display: flex;
 	color: #FFFFFF;
 	position: absolute;
 	top: 28px;
-}
+} */
 .menu__item_buffer {
 	width: 280px;
 	margin: 0 -1px;
@@ -131,7 +143,16 @@ font-weight: 700;
 font-size: 16px;
 line-height: 38px;
 color: #4081FF;
+align-items: center;
 }
+@media (max-width: 965px) {
+	.menu__link {
+		font-size: 18px;
+		line-height: 24px;
+	}
+}
+
+
 .menu__link img {
 	border: 1px solid #292929;
 	}
